minor css change to prevent async children from pushing the page down too much

--- a/uaMenu.css
+++ b/uaMenu.css
@@ -67,3 +67,7 @@
 		line-height: 40px;
 		text-decoration: none;
 	}
+	.panel-body {
+		max-height: 300px;
+		overflow-y: scroll;
+	}
